# CK3toEU5

./: .clang-format  .gitignore  CMakeLists.txt  Copy_Files.sh  vcpkg.json
src/: CK3ToEU4Converter.cpp  CK3ToEU4Converter.h  main.cpp
src/CK3World/: World.cpp  World.h
src/CK3World/Characters/: Character.cpp  Character.h  CharacterDomain.cpp  CharacterDomain.h  Characters.cpp  Characters.h
src/CK3World/CoatsOfArms/: CoatOfArms.cpp  CoatOfArms.h  CoatsOfArms.cpp  CoatsOfArms.h  Emblem.cpp  Emblem.h  EmblemInstance.cpp  EmblemInstance.h
src/CK3World/Confederations/: Confederation.cpp  Confederation.h  Confederations.cpp  Confederations.h
src/CK3World/Cultures/: Culture.cpp  Culture.h  Cultures.cpp  Cultures.h
src/CK3World/Dynasties/: Dynasties.cpp  Dynasties.h  Dynasty.cpp  Dynasty.h  House.cpp  House.h  HouseNameScraper.cpp  HouseNameScraper.h  HouseNameScraping.cpp  HouseNameScraping.h  Houses.cpp  Houses.h
src/CK3World/Flags/: Flags.cpp  Flags.h
src/CK3World/Geography/: CountyDetail.cpp  CountyDetail.h  CountyDetails.cpp  CountyDetails.h  ProvinceHolding.cpp  ProvinceHolding.h  ProvinceHoldings.cpp  ProvinceHoldings.h
src/CK3World/Religions/: Faith.cpp  Faith.h  Faiths.cpp  Faiths.h  Religion.cpp  Religion.h  Religions.cpp  Religions.h
src/CK3World/Titles/: DynamicTemplate.cpp  DynamicTemplate.h  LandedTitles.cpp  LandedTitles.h  Title.cpp  Title.h  Titles.cpp  Titles.h
src/Configuration/: Configuration.cpp  Configuration.h
src/Helpers/: rakaly.h
src/Mappers/AfricanPassesMapper/: AfricanPassesMapper.cpp  AfricanPassesMapper.h  AfricanPassesMapping.cpp  AfricanPassesMapping.h
src/Mappers/CK3ReligionScraper/: CK3ReligionScraper.cpp  CK3ReligionScraper.h  CK3ReligionScraping.cpp  CK3ReligionScraping.h
src/Mappers/CultureDefinitionsMapper/: CultureDefinitionsMapper.cpp  CultureDefinitionsMapper.h  CultureDefiniton.cpp  CultureDefiniton.h  CultureGroupDefinition.cpp  CultureGroupDefinition.h
src/Mappers/CultureMapper/: CultureMapper.cpp  CultureMapper.h  CultureMappingRule.cpp  CultureMappingRule.h
src/Mappers/DevWeightsMapper/: DevWeightsMapper.cpp  DevWeightsMapper.h
src/Mappers/DynamicIdeasMapper/: AssignmentPairs.h  DynamicIdeasLink.cpp  DynamicIdeasLink.h  DynamicIdeasMapper.cpp  DynamicIdeasMapper.h  DynamicIdeasRule.cpp  DynamicIdeasRule.h  DynamicIdeasRuleEnum.h
src/Mappers/GovernmentsMapper/: GovernmentsMapper.cpp  GovernmentsMapper.h  GovernmentsMapping.cpp  GovernmentsMapping.h
src/Mappers/HeritageMapper/: HeritageMapper.cpp  HeritageMapper.h  HeritageMapping.cpp  HeritageMapping.h
src/Mappers/IAmHreMapper/: IAmHreMapper.cpp  IAmHreMapper.h
src/Mappers/IslamOverrideMapper/: IslamOverrideMapper.cpp  IslamOverrideMapper.h  IslamOverrideMapping.cpp  IslamOverrideMapping.h
src/Mappers/LocDegraderMapper/: LocDegraderMapper.cpp  LocDegraderMapper.h  LocDegraderMapping.cpp  LocDegraderMapping.h
src/Mappers/LocalizationMapper/: LocalizationMapper.cpp  LocalizationMapper.h
src/Mappers/NamedColors/: NamedColors.cpp  NamedColors.h
src/Mappers/PrimaryTagMapper/: PrimaryTagCulture.cpp  PrimaryTagCulture.h  PrimaryTagCultureGroup.cpp  PrimaryTagCultureGroup.h  PrimaryTagMapper.cpp  PrimaryTagMapper.h
src/Mappers/ProvinceMapper/: ProvinceMapper.cpp  ProvinceMapper.h  ProvinceMapping.cpp  ProvinceMapping.h  ProvinceMappingsVersion.cpp  ProvinceMappingsVersion.h
src/Mappers/RegionMapper/: Area.cpp  Area.h  Region.cpp  Region.h  RegionMapper.cpp  RegionMapper.h  SuperRegion.cpp  SuperRegion.h
src/Mappers/ReligionDefinitionMapper/: ReligionDefinitionMapper.cpp  ReligionDefinitionMapper.h  ReligionDefinitionMapping.cpp  ReligionDefinitionMapping.h
src/Mappers/ReligionGroupScraper/: ReligionGroupScraper.cpp  ReligionGroupScraper.h  ReligionGroupScraping.cpp  ReligionGroupScraping.h
src/Mappers/ReligionMapper/: ReligionMapper.cpp  ReligionMapper.h  ReligionMapping.cpp  ReligionMapping.h
src/Mappers/RulerPersonalitiesMapper/: RulerPersonalitiesMapper.cpp  RulerPersonalitiesMapper.h  RulerPersonalitiesMapping.cpp  RulerPersonalitiesMapping.h
src/Mappers/ShatterEmpiresMapper/: ShatterEmpiresMapper.cpp  ShatterEmpiresMapper.h
src/Mappers/StartDateMapper/: StartDateMapper.cpp  StartDateMapper.h
src/Mappers/TitleTagMapper/: TitleTagMapper.cpp  TitleTagMapper.h  TitleTagMapping.cpp  TitleTagMapping.h
src/Mappers/TraitScraper/: TraitScraper.cpp  TraitScraper.h  TraitScraping.cpp  TraitScraping.h
src/Mappers/VassalSplitoffMapper/: VassalSplitoffMapper.cpp  VassalSplitoffMapper.h
